# gotopy

./: .gitignore  README.md  pyproject.toml
examples/: main.py  minimal_subprog.py
gotopy/: __init__.py  gotopy.py
gotopy2/: __init__.py
tests/: test_gotopy.py  test_nested_run_file_subprog.py
